--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -27,7 +27,7 @@ Simulation results of hand-crafted SE kernels have shown orders-of-magnitude bet
   \label{fig:se_example}
 \end{figure}
 
-A simple example that illustrates a program mapped to the SE is shown in Fig. \ref{fig:se_example}.
+A simple example that illustrates a program mapped to the SE is shown in \figurename~\ref{fig:se_example}.
 The program in this example is a distance calculation function shown in Eq. \ref{eq:dist}.
 
 \begin{equation}
@@ -36,7 +36,7 @@ The program in this example is a distance calculation function shown in Eq. \ref
 \end{equation}
 
 To keep this example simple, we ignore the square root part of the equation.
-The program is represented as a Data-Flow Graph (DFG) as shown in Fig. \ref{fig:se_example}.
+The program is represented as a Data-Flow Graph (DFG) as shown in \figurename~\ref{fig:se_example}.
 Each operation in Eq. \ref{eq:dist} is an instruction that is mapped to a slot at a tile on the SE.
 Since the output of the MS unit is connected to the input of AL unit, instruction 6 produces $\Delta z^2$ on the output on MS unit and adds it to $(\Delta x^2 + \Delta y^2)$ at the AL unit.
 
