--- a/doc/conference_101719.tex
+++ b/doc/conference_101719.tex
@@ -91,7 +91,7 @@ reinforcement learning, data-flow mapping, coarse grain reconfigurable array
 \input{sections/Conclusion}
 
 
-\section*{Acknowledgment}
+%\section*{Acknowledgment}
 
 
 \bibliographystyle{IEEEtran}
