fixing typos, rearrange figures, ediitn about future work
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/conference_101719.tex
+++ b/doc/conference_101719.tex
@@ -63,7 +63,7 @@
 \end{abstract}
 
 \begin{IEEEkeywords}
-reinforcement learning, data-flow mapping, coarse grain reconfigurable array
+reinforcement learning, data-flow mapping, coarse-grained reconfigurable array
 \end{IEEEkeywords}
 
 \section{Introduction}
