--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -26,15 +26,16 @@ These asynchronous operations include initiating SDF operations, transferring da
 As shown in the \figurename~\ref{fig:se_diagram}, tiles are interconnected in a $1 \times 16$ configuration.
 The SF is used to connect a tile to another tile one hop above it, a tile two hops above it, a tile one hop below it and a tile two hops below it.
 Information is transferred over the SF with a deterministic latency. 
-Each tile acts independently, streaming data through internal memory and MS/AL units, to other tiles over the SF and AF.
-The tiles use the AF to communicate between synchronous domains, send load and stores to memory through the MI, and receive commands from the host through the DI to initiate work on the SE.
+Each tile acts independently, streaming data through internal memory and MS/AL units to other tiles over the SF and AF.
+The tiles use the AF to communicate between synchronous domains, send loads
+ and stores to memory through the MI, and receive commands from the host through the DI to initiate work on the SE.
 Information is transferred over the AF with a non-deterministic latency.
 
 
-\par{Synchronous Fabric Interface}
+\subsection{Synchronous Fabric Interface}
 All tiles that participate in a synchronous domain act as a single pipelined data path.
-The Base Tile (BT) is defined as the first tile of a synchronous domain that initiates a thread of work through the pipelined tiles.
-The BT is responsible for starting work on a predefined cadence, referred to as the Spoke Count or Initiation Interval (II).
+The Base Tile (BT) is defined as the first tile of a synchronous domain it initiates a thread of work through the pipelined tiles.
+The BT is responsible for starting work on a predefined cadence, referred to as the Spoke Count or II.
 E.g. For $II = 3$, as in the example in \figurename~\ref{fig:se_example}, then the BT can initiate work every third clock cycle.
 %The synchronous fabric provides both data and control information.
 
@@ -54,7 +55,9 @@ A new thread is launched by the tile base of the BT every II.
 The II allows the base logic to launch new threads or continue previously launched threads when all resources needed for execution are available.
 
 \subsection{Tile Memory}
-Each tile contains two memories, each are the width of the data path (512-bits), and the depth will be in the range of 512 to 1024 elements.
+Each tile contains two memories.
+E
+ach are the width of the data path (512-bits), and the depth will be in the range of 512 to 1024 elements.
 The tile memories are used to store data required to support data path operations.
 The stored data can be constants loaded as part of the program's arguments, or variables calculated as part of the data flow.
 The tile memory can be written from the AF as either a data transfer from another SDF, or the result of a load operation initiated by another SDF.
@@ -71,7 +74,7 @@ A couple of relevant configurations are:
 
 \begin{itemize}
   \item Which of the four SF inputs, feedback from the output of the tile's MS/AL unit, or the tile base is the master input.
-  \item Which of the four SF outputs are used to send the output of the MS/AL unit to other tile or tiles using SF.
+  \item Which of the four SF outputs are used to send the output of the MS/AL unit to another tile or tiles using SF.
 \end{itemize}
 
 The Spoke RAM iterates over its slots using a counter that modulo counts from zero to II minus one and back to zero.
@@ -84,8 +87,9 @@ An SDF is marked by instructions sending and receiving data in deterministic lat
 All operations with nondeterministic latencies, e.g. load/store requests to the MI, mark either the beginning and/or ending of an SDF.
 We have a written an in-house parser that enables the programmer to express the program in terms of SDFs using our defined assembly language.
 The parser produces an Intermediate Representation (IR) that is used as an input to our proposed mapper.
+
 The IR represents each SDF as a DFG, where every instruction a node.
-Each node represents an instruction that needs to be placed onto a SE tile at he proper time-slice such that when all nodes are placed, the program executes correctly. 
+Each node represents an instruction that needs to be placed onto a SE tile at the proper time-slice such that when all nodes are placed, the program executes correctly. 
 In \figurename~\ref{fig:se_example}, the edges of the graph represent the data dependencies of the instructions. 
 The nodes also contain information about the variables that need to be present in tile memories during instruction execution. 
 The instruction intended to execute at a specific time-slice (clock cycle) will only execute when the master input configured in the corresponding Spoke RAM entry receives a valid control message.
