--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -56,8 +56,7 @@ The II allows the base logic to launch new threads or continue previously launch
 
 \subsection{Tile Memory}
 Each tile contains two memories.
-E
-ach are the width of the data path (512-bits), and the depth will be in the range of 512 to 1024 elements.
+Each are the width of the data path (512-bits), and the depth will be in the range of 512 to 1024 elements.
 The tile memories are used to store data required to support data path operations.
 The stored data can be constants loaded as part of the program's arguments, or variables calculated as part of the data flow.
 The tile memory can be written from the AF as either a data transfer from another SDF, or the result of a load operation initiated by another SDF.
